<resources>
    <string name="generalAppName">PersonalNotes</string>
    <string name="noteDetailsTitleHint">Title</string>
    <string name="noteDetailsDataHint">Note</string>
    <string name="noteDetailsSaveButton">Save</string>
    <string name="notesListAddNewNoteContentDescription">Add new note</string>
    <string name="noteDetailsMenuDeleteNoteTitle">Delete</string>
    <string name="noteDetailsTitleCreate">Create a new note</string>
    <string name="noteDetailsTitleEdit">Edit note</string>
    <string name="notesListToday">Today</string>
    <string name="noteDetailsNoteFetchedFailed">Sorry, note failed</string>
    <string name="noteDetailsCreateNoteFailed">Create note failed</string>
    <string name="noteDetailsEditNoteFailed">Edit note failed</string>
    <string name="noteDetailsDeleteNoteFailed">Delete note failed</string>
    <string name="notesListEmptyPrimary">List is empty</string>
    <string name="notesListEmptySecondary">Click Add button to create new note</string>
    <string name="title_activity_exercise_copose">ExerciseCoposeActivity</string>
</resources>