<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mksoftware101.personalnotes.ui.noteslist.NotesListViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/generalAppName" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:context=".ui.noteslist.NotesListFragment">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notesListEmptyPrimary"
                style="@style/NotesListEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notesListEmptyPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/notesListEmptySecondary"
                style="@style/NotesListEmpty.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/listPadding_12"
                android:text="@string/notesListEmptySecondary"
                app:layout_constraintEnd_toEndOf="@id/notesListEmptyPrimary"
                app:layout_constraintStart_toStartOf="@id/notesListEmptyPrimary"
                app:layout_constraintTop_toBottomOf="@+id/notesListEmptyPrimary" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/notesSwipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notesRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scrollbars="vertical"
                    app:itemBinding="@{viewModel.itemBinding}"
                    app:items="@{viewModel.itemsList}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fabMargin"
            android:layout_marginBottom="@dimen/fabMargin"
            android:contentDescription="@string/notesListAddNewNoteContentDescription"
            android:onClick="@{() -> viewModel.onAddNewNoteClick()}"
            app:icon="@android:drawable/ic_input_add"
            app:iconTint="?attr/colorOnPrimary" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>